crates/module-system/sov-modules-macros/tests/integration/constants/create_gas_constant_invalid_type.stderr
error[E0308]: mismatched types
 --> tests/integration/constants/create_gas_constant_invalid_type.rs:4:34
  |
4 | pub const TEST_GAS: GasUnit<1> = config_gas_unit!("TEST_GAS_CONST_CORRECT");
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `1`, found `2`
  |
  = note: expected struct `GasUnit<1>`
             found struct `GasUnit<2>`
  = note: this error originates in the macro `config_gas_unit` (in Nightly builds, run with -Z macro-backtrace for more info)
